apps/lilium/less/payments.less
#pending-payment-overviews {
    display: flex;
    flex-direction: row;
    height: 100%;

    .payment-selection-boc {
        cursor: pointer;
        background: transparent;
        border: 2px solid rgba(0, 0, 0, 0.4);
        width: 20px;
        height:  20px;
        border-radius: 4px;

        i.fa {
            display: none;
        }
    }
    
    .contractor-info {
        display: flex;
        align-content: center;
        align-items: center;
        height: 65px;
    }

    img.contractor-avatar {
        height: 100%;
        width: auto;
        border-radius: 50%;
        padding: 0px 12px;
    }
    &.small {
        img.contractor-avatar {
            height: 40px;
        }
    }

    @controlsHeight: 5%;
    & > #pending-payments-list {
        flex: 0 0 25%;
        max-height: 100%;

        #list-controls {
            display: flex;
            margin: 4px 12px;
            height: @controlsHeight;
            h4 {
                margin: 0px 8px;
            }
        }

        .scroll {
            height: calc(100% - @controlsHeight);
            overflow-y: scroll;
        }
        
        .pending-payment-card {
            margin: 1px;
            padding: 6px;
            box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
            display: flex;
            
            &.selected {
                background: @liliumPurple;
                background: -webkit-linear-gradient(35deg, #b48efb 0%, #f777e1 100%);
                color: white;
                .selection-box-wrapper {
                    .payment-selection-boc {
                        background-color: white;

                        i.fa {
                            display: initial;
                            color: #333;
                            margin-left: 2px;
                        }
                    }
                }
            }

            .contractor-name {
                margin: 0px 4px;
            }
            p.payment-text-detail {
                margin: 0px 4px;
            }

            .selection-box-wrapper {
                display: flex;
                align-items: center;
            }
        }
    }

    #payment-details-column {
        flex-grow: 1;
        background: @bodyBackgroundGray;

        #no-selected-payment {
            margin: 40px auto;
            padding: 12px;
            width: 30%;
            text-align: center;
        }

        #payment-details-header {
            display: flex;
            background: white;
            padding: 8px;
            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
            margin-bottom: 4px;

            img {
                height: 100px;
                width: auto;
            }

            #detailled-payment-info {
                flex-grow: 1;
                margin-left: 12px;

                & > * {
                    margin: 6px 0px;
                }

                #payment-period {
                    color: darken(@liliumPurple, 15%);
                    font-weight: 400;
                }
            }

            #pay-individual {
                flex: 0 0 150px;
            }

        }

        #individual-payment-breakdown {
            padding: 12px;
        }

        .payments-breakdown {
            height: 100%;
            @headerHeight: 5%;
            #breakdown-header {
                display: flex;
                justify-content: space-around;
                background: white;
                max-height: @headerHeight;
                margin-bottom: 4px;
                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
                padding: 6px;

                h1 {
                    border-bottom: none;
                    margin: 0px 12px;
                }
            }
    
            #payment-breakdown-list {
                overflow-x: hidden;
                overflow-y: auto;
                height: calc(100% - @headerHeight);
                padding: 0px 8px;
            }
        }
    }
}

.card.payment-summary {
    margin: 12px;
    padding: 12px;
    box-sizing: border-box;

    .contractor-name {
        flex-grow: 1;
        margin: 0px;
    }
}

table.articles-summary {
    max-width: 100%;
    box-sizing: border-box;
    @headlineColumnWidth: 70%;
    margin: 0;

    th {
        text-align: left;
    }

    tr > * {
        padding: 0px 4px;
        &:not(:first-child) {
            width: calc((100% - @headlineColumnWidth) / 3);
        }
        &:first-child {
            max-width: @headlineColumnWidth;
            width: @headlineColumnWidth;
            overflow: hidden;
            text-overflow: ellipsis;
            white-space: nowrap;
        }
    }
}

#credit-cards-management {
    display: flex;
    height: 100%;
    
    #credit-card-list {
        height: 100%;
        overflow-y: scroll;
        flex: 0 0 25%;

        & > * {
            .credit-card {
                margin: 8px auto;
            }

            &.selected .credit-card {
                transform: scale(1.1);
                margin-bottom: 16px;
                margin-top: 16px;
            }
        }
    }

    #credit-card-details-pane {
        box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
        background: @liliumBackground;
        height: 100%;
        flex-grow: 1;

        #credit-card-edit {
            background: white;
            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
            margin: 20px auto;
            border-radius: @ccBorderRadius;
            /* Force children to obey border radius */
            overflow: hidden;
            width: calc(@ccWidth * 1.3);

            .credit-card {
                width: 100%;
                height: auto;
                margin: 0 auto;
                border-radius: 0px
            }

            #credit-card-form {
                margin: 12px 6px;

                #bottom-line > * {
                    width: 50%;
                }
            }
        }
    }
}

#invoices-history {
    height: 100%;
    
    .invoice {
        display: flex;
        justify-content: space-between;
        align-content: center;
        margin: 3px 12px;

        & > * {
            flex-basis: 0;
            flex-grow: 1;
        }

        .invoice-number {
            flex: 0 0 100px;
        }

        .invoice-contractor {
            display: flex;
            align-content: center;

            img {
                height: 40px;
                width: auto;
                border-radius: 50%;
            }
        }

        .invoice-status {
            color: #ff2634;

            &.valid {
                color: rgb(16, 111, 16);
            }
        }
    }
}

